--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <section id="home" class="hero">
-        <h2>Welcome to Cheetos Central</h2>
+        <h2>Welcome to Cheetos</h2>
     </section>
 
     <section id="about" class="content">
