--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
               <h1 class="Vision">Who are we?</h1>
               <br>
               <p class="card1">We're more than just a company we're passion turned into reality! We work to deliver innovative solutions tailored to your needs. We believe that every challenge is an opportunity for creativity, and we always.</p>
-              <button>amr</button>
+              <button>more</button>
             </div>
             <div class="card">
               <h1>What do we do?</h2>
                 <br>
               <p>We turn ideas into reality by providing advanced services that meet our clients' aspirations. Our goal is to empower individuals and businesses to succeed through innovative solutions that combine creativity and .</p>
-              <button>amr</button>
+              <button>more</button>
             </div>
             <div class="card">
               <h1>Why us?</h2>
@@ -47,13 +47,13 @@
                 <p><li>Trusted Experience: Years of professional work in providing the best solutions.</li></p>
                 <p><li>Creativity without limits: We constantly innovate to keep pace with the evolv</li></p>
                 <p><li>Customer Satisfaction: Our success begins with the </li></p>
-              <button>amr</button>
+              <button>more</button>
             </div>
             <div class="card">
               <h1>Our mission?</h2>
                 <br>
             <p>Empowering individuals and businesses with advanced solutions that combine creativity and technology to achieve their goals efficiently and professionally.Empowering individuals and businesses with advanced solutions that </p>              
-                <button>amr</button>
+                <button>more</button>
     </section>
 
     <section id="services" class="content">
